# coursework-a-table-pet-Haro

./: .gitignore  CMakeLists.txt  Haro.iss  Haro.pro  Haro.rc  LICENSE  README.md  README_CN.md  main.cpp  res.qrc
res/file/: Haro-autostart.desktop
src/: dresswin.cpp  haro.cpp  musicwin.cpp  resources.cpp  setwin.cpp  systemtray.cpp  timer.cpp
src/include/: dresswin.h  dresswin.ui  haro.h  haro.ui  musicwin.h  musicwin.ui  resources.h  setwin.h  setwin.ui  systemtray.h  timer.h
